add auto-okyc content changes

--- a/content/data/okyc/okyc-api-integration.mdx
+++ b/content/data/okyc/okyc-api-integration.mdx
@@ -1,11 +1,11 @@
 ---
-sidebar_title: API Integration
+sidebar_title: OKYC API Integration
 page_title: Offline Aadhar API integration
 order: 3
 visible_in_sidebar: true
 ---
 
-## API integration
+## OKYC API integration
 
 Setu’s API solution can be used to complete a customer’s KYC with offline Aadhaar in real-time—with your own screens on your app or website. With this, you will get a downloadable, locked XML file with Aadhaar information from your customers.
 
@@ -14,7 +14,7 @@ The following APIs are required for enabling this flow—
 -   **Create OKYC request**—Create OKYC request for your customer. You will get a unique `id` in the response which can be used to track this particular request.
 -   **Initiate OKYC Request**—Initialise the OKYC request for your customer with the previously returned request `id` and receive a `base64` encoded `captchaImage` from Setu. Once you have called this API, you can redirect your customer to your OKYC screens, to collect Aadhaar number and captcha from your customer.
 -   **Verify OKYC Request**—Share the `aadhaarNumber` and `captchaCode`, collected from your customer, with Setu. Next, redirect your customer to a screen to collect OTP sent to your customer’s Aadhaar linked mobile number. Also request your customer to enter a 4 digit share code—this is the code that will be used to unlock you customer’s fetch Aadhaar XML file.
--   **Complete OKYC Request**—Share the collected `otp` and `shareCode` to complete verification process. Next, you can call the **Get OKYC request status** API. Once the OKYC request has been processed successfully you wll get customer details from the Aadhaar and the XML file link in the response.
+-   **Complete OKYC Request**—Share the collected `otp` and `shareCode` to complete verification process. Next, you can call the **Get OKYC request status** API. Once the OKYC request has been processed successfully you will get customer details from the Aadhaar and the XML file link in the response.
 -   **Get OKYC request status**—Get status of customer verification by providing the request `id` and optionally, the `shareCode`.
 
 Additionally, here is the information you would need for calling these APIs—
