add error codes for upidl

--- a/content/payments/upi-deeplinks/notifications.mdx
+++ b/content/payments/upi-deeplinks/notifications.mdx
@@ -377,6 +377,65 @@ Merchants receive notifications if a payment attempt fails due to incorrect UPI 
         </td>
       </tr>
       <tr>
+        <td>Y1</td>
+        <td>BENEFICIARY CBS OFFLINE</td>
+        <td>The Core Banking System (CBS) of the beneficiary's bank is currently offline.</td>
+        <td>
+        Inform the customer that the beneficiary's bank system is offline.
+        Recommend that they try the transaction again later.
+        </td>
+      </tr>
+      <tr>
+        <td>S96</td>
+        <td>Remitter Dispatch Failed</td>
+        <td>The dispatch of the transaction request from the remitter's end failed.</td>
+        <td>
+        Inform the customer about the failure and ask them to retry the transaction. If the issue persists, contact Setu support.
+        </td>
+      </tr>
+      <tr>
+        <td>Z7</td>
+        <td>TRANSACTION FREQUENCY LIMIT EXCEEDED AS SET BY REMITTING MEMBER</td>
+        <td>The transaction frequency limit set by the remitting bank has been exceeded.</td>
+        <td>
+        Advise the customer to review their transaction limits with their bank and try again later. 
+        They may need to contact their bank to adjust the limits.
+        </td>
+      </tr>
+      <tr>
+        <td>ST1</td>
+        <td>MERCHANT ERROR (PAYEE PSP)</td>
+        <td>Product_instance: already closed: Duplicate payment attempt detected for a transaction that is already fulfilled.</td>
+        <td>
+        Inform the customer that the payment was already completed for the given transaction.
+        </td>
+      </tr>
+      <tr>
+        <td>ST2</td>
+        <td>MERCHANT ERROR (PAYEE PSP)</td>
+        <td>Amount does not match: The customer modified the payment amount, which differs from the expected amount while creating the payment link.</td>
+        <td>
+        Request the customer to not edit the payment amount in the UPI App.
+        </td>
+      </tr>
+      <tr>
+        <td>ST3</td>
+        <td>MERCHANT ERROR (PAYEE PSP)</td>
+        <td>Product_Instance not found: Either the customer is trying to pay directly to the VPA instead of clicking on the intent link,
+        or the customers UPI App failed to send the correct Order ID provided in the intent link.</td>
+        <td>
+       Inform the customer to pay only via the Intent Link or change the UPI app used to make the payment.
+        </td>
+      </tr>
+      <tr>
+        <td>ST4</td>
+        <td>MERCHANT ERROR (PAYEE PSP)</td>
+        <td>Intent Link expired: The customer is trying to make a payment after the expiry defined by the merchant.</td>
+        <td>
+        Inform the customer that the payment link has expired.
+        </td>
+      </tr>
+      <tr>
         <td>U01</td>
         <td>THE REQUEST IS DUPLICATE</td>
         <td>Duplicate transaction request.</td>
